December 2016
=============

* New: function TxtGetWidth( xText, cFontName, nFontSize ) --> nWidth

* New: Class TWBrowse Method nColPos() --> nCol

* Fix: Class TWBrowse Method nRowPos() now returns zero when there are
  no rows

* New: Class TWBrowse DATA bMouseDown. It receives nRow, nCol and Self


November 2016
=============

* New: function GetMacAdress() --> cMacAddress

September 2016
==============

* Fix: GETs with special chars were not shown properly. We change
  the function GETSETTEXT() to use NSUTF8StringEncoding

* Enhancement: Class TGroup can be used as a container for controls:
  @ ..., ... OF oGroup. Please review samples/TestGrp.prg

* Enhancement: Minor changes in Class TSay

* Fixed samples/TestGrp.prg, broken due to recent changes in window/dialog
  dimensions.

* Fixed samples/TestGet.prg, broken due to recent changes in windows/dialog
  dimensions.

* New: Class TCoverFlow and @ ..., ... COVERFLOW ...
  Please review samples/TestCovf.prg. Thanks to Manuel Alvarez!

* New: Class TMovie and @ ..., ... MOVIE ...
   Please review samples/TestMov.prg. Thanks to Manuel Alvarez!

* New: Class TWebView and @ ..., ... WEBVIEW ... URL ... 
  Please review samples/TestWeb.prg. Thanks to Manuel Alvarez!

* New: REDEFINE COMBOBOX [ oCbx VAR ] cVar ID nId OF oWnd is already
  available. Please review samples/TestNib.prg

* New: REDEFINE CHECKBOX [ oChk VAR ] lVar ID nId OF oWnd is working!
  Please revew samples/TestNib.prg

* New: REDEFINE GET [ oGet VAR ] cVar ID nId OF oWnd is working!
  Please review samples/TestNib.prg

* New: REDEFINE BUTTON oBtn ID nId OF oWnd is working! Please review
  samples/TestNib.prg

* New: First implementation for: DEFINE WINDOW oWnd RESOURCE cNibName
  Please review samples/TestNib.prg

* New: First tests using NIB files!!! Thanks to Manuel Alvarez.
  Please review samples/TestNib.prg

* Fix: Coordinates were also messed in Class TDialog. Now they are fine.
